--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "cra-test",
   "version": "1.0.0",
-  "verbose": true,
-  "ignore": ["node_modules", ".next"],
-  "watch": [ "/server.js"],
-  "ext": "js json"
+  "scripts": {
+    "client": "cd client && npm start",
+    "server": "cd server && npm run dev",
+    "start": "concurrently  \"npm run server\" \"npm run client\" ",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "concurrently": "^4.1.0"
+  }
 }
